fix for works not wrapping in mobile view in all datatables, fixed minor ui issues on login and menu in mobile view

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -243,3 +243,7 @@ a:visited {
 .request_details_section {
   margin-left: 5px;
 }
+
+.child {
+  word-break: break-all;
+}
